# ghost-session.v.2

./: .buildstamp  .gitignore  README.md  package.json  pnpm-lock.yaml  railway.json
.github/workflows/: build.yml
apps/desktop/: .env.production  package.json  tailwind.config.ts  vite.config.ts
apps/desktop/public/: debug.html
apps/desktop/src/: App.tsx
apps/desktop/src/components/audio/: FrequencyBar.tsx  TransportBar.tsx
apps/desktop/src/components/auth/: SessionPreviewPanel.tsx
apps/desktop/src/components/common/: Avatar.tsx  ContextMenu.tsx  EditableField.tsx  ErrorBoundary.tsx  Input.tsx  InviteModal.tsx  NotificationPopup.tsx  SettingsPopup.tsx
apps/desktop/src/components/layout/: PresenceFriendsList.tsx  ProjectListSidebar.tsx  SessionShell.tsx  SessionSidebar.tsx  TopNavBar.tsx
apps/desktop/src/components/plugin/: PluginLayout.tsx
apps/desktop/src/components/project/: ArrangementComponents.tsx  CollaboratorPanel.tsx
apps/desktop/src/components/projects/: ProjectCard.tsx
apps/desktop/src/components/session/: BottomPanel.tsx  ChatPanel.tsx  RemoteCursors.tsx  SessionChat.tsx  SessionCollaboratorsBlock.tsx  SessionHeaderBar.tsx  TrackTimeline.tsx  TransportControls.tsx  timelineModel.ts
apps/desktop/src/components/social/: FriendsPanel.tsx  SocialFeed.tsx
apps/desktop/src/components/tracks/: DropZone.tsx  FullMixDropZone.tsx  StemRow.tsx  Waveform.tsx
apps/desktop/src/components/video/: VideoGrid.tsx
apps/desktop/src/hooks/: useCursorTracking.ts  useFileDropzone.ts  useNotifications.ts  useOutsideClick.ts  useSamplePacks.ts
apps/desktop/src/lib/: api.ts  audio.ts  constants.ts  hostContext.ts  socket.ts
apps/desktop/src/pages/: LoginPage.tsx  RegisterPage.tsx  SessionWorkspacePage.tsx
apps/desktop/src/stores/: audioStore.ts  authStore.ts  projectStore.ts  sessionStore.ts
apps/desktop/src/styles/: globals.css
apps/electron/: main.js  package.json  preload.js
apps/plugin/: CMakeLists.txt  test.html
apps/plugin/Source/Auth/: AuthManager.cpp
apps/plugin/Source/Core/: AppState.h  PluginEditor.cpp  PluginEditor.h  StandaloneApp.cpp
apps/plugin/Source/Network/: ApiClient.h  LocalClient.cpp  LocalClient.h
apps/plugin/Source/UI/: ProjectView.cpp  SessionWorkspaceView.cpp  SessionWorkspaceView.h
apps/server/: .env.example  package.json
apps/server/src/: index.ts
apps/server/src/db/: index.ts  schema.ts
apps/server/src/lib/: activityComment.ts  autoSnapshot.ts  membership.ts
apps/server/src/middleware/: auth.ts
apps/server/src/routes/: auth.ts  comments.ts  files.ts  invitations.ts  likes.ts  notifications.ts  projects.ts  samplepacks.ts  sessions.ts  social.ts  tracks.ts  users.ts  versions.ts
apps/server/src/services/: auth.ts  storage.ts
apps/server/src/ws/: chat.ts  cursor.ts  index.ts  presence.ts  webrtc.ts
docs/: designer-handover.md
